# controller/coba.go
@@ -72,7 +72,17 @@ func GetMatkul (c *fiber.Ctx) error {
 	ps := cek.GetAllMatkul()
 	return c.JSON(ps)
 }
-
+// InsertDataPresensi godoc
+// @Summary Insert data presensi.
+// @Description Input data presensi.
+// @Tags Presensi
+// @Accept json
+// @Produce json
+// @Param request body Presensi true "Payload Body [RAW]"
+// @Success 200 {object} Presensi
+// @Failure 400
+// @Failure 500
+// @Router /insert [post]
 func InsertDataPresensi(c *fiber.Ctx) error {
 	db := config.Ulbimongoconn
 	var presensi inimodel.Presensi
